feat: add index.hbs and basic UI

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,51 @@
-<h1>Hello everyone</h1>
+<div class="container d-flex flex-column justify-content-center">
+    <div class="row form-grop my-3">
+        <form action="/" method="post">
+            <div class="card-container card-group mb-3">
+                <div class="card" style="width: 18rem;">
+                    <label for="engineer">
+                        <div class="photo-container">
+                            <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5668/angry-developer.jpg" class="card-img-top" alt="engineer photo">
+                        </div>
+                        <div class="card-body">
+                            <input type="radio" name="operator" id="engineer" value="engineer">
+                            <span>工程師</span>
+                        </div>
+                    </label>
+                </div>
+
+                <div class="card" style="width: 18rem;">
+                    <label for="designer">
+                        <div class="photo-container">
+                            <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5667/angry-designer.jpg" class="card-img-top" alt="designer photo">
+                        </div>
+                        <div class="card-body">
+                            <input type="radio" name="operator" id="designer" value="designer">
+                            <span>設計師</span>
+                        </div>
+                    </label>
+                </div>
+
+                <div class="card" style="width: 18rem;">
+                    <label for="entrepreneur">
+                        <div class="photo-container">
+                            <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5669/angry-founder.jpg" class="card-img-top" alt="entrepreneur photo">
+                        </div>
+                        <div class="card-body">
+                            <input type="radio" name="operator" id="entrepreneur" value="entrepreneur">
+                            <span>創業家</span>
+                        </div>
+                    </label>
+                </div>
+            </div>
+            
+            <div class="d-flex justify-content-center">
+                <button type="submit" class="btn btn-success">產生垃圾話</button>
+            </div>
+            
+        </form>
+    </div>
+    <div class="row result-container my-2">
+        <div class="text-center">result will show at here</div>
+    </div>
+</div>
