--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,9 +7,14 @@
     <title>Trash Talk Generator</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-    <h1>Main page</h1>
+
+    <nav class="navbar navbar-light bg-light px-2">
+        <div class="container-fluid navbar-brand navbar-container"><a href="/" class="text-decoration-none">垃圾話產生器</a></div>
+    </nav>
+    
     {{{body}}}
 
     <!-- JavaScript Bundle with Popper -->
