--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <div class="container d-flex flex-column justify-content-center">
     <div class="row form-grop my-3">
-        <form action="/" method="post">
+        <form action="/" method="get">
             <div class="card-container card-group mb-3">
                 <div class="card" style="width: 18rem;">
                     <label for="engineer">
@@ -8,7 +8,7 @@
                             <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5668/angry-developer.jpg" class="card-img-top" alt="engineer photo">
                         </div>
                         <div class="card-body">
-                            <input type="radio" name="operator" id="engineer" value="engineer">
+                            <input type="radio" name="occupation" id="engineer" value="engineer">
                             <span>工程師</span>
                         </div>
                     </label>
@@ -20,7 +20,7 @@
                             <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5667/angry-designer.jpg" class="card-img-top" alt="designer photo">
                         </div>
                         <div class="card-body">
-                            <input type="radio" name="operator" id="designer" value="designer">
+                            <input type="radio" name="occupation" id="designer" value="designer">
                             <span>設計師</span>
                         </div>
                     </label>
@@ -32,7 +32,7 @@
                             <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5669/angry-founder.jpg" class="card-img-top" alt="entrepreneur photo">
                         </div>
                         <div class="card-body">
-                            <input type="radio" name="operator" id="entrepreneur" value="entrepreneur">
+                            <input type="radio" name="occupation" id="entrepreneur" value="entrepreneur">
                             <span>創業家</span>
                         </div>
                     </label>
@@ -46,6 +46,6 @@
         </form>
     </div>
     <div class="row result-container my-2">
-        <div class="text-center">result will show at here</div>
+        <div class="text-center">{{trashtalk}}</div>
     </div>
 </div>
