--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,8 +11,8 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-light bg-light px-2">
-        <div class="container-fluid navbar-brand navbar-container"><a href="/" class="text-decoration-none">垃圾話產生器</a></div>
+    <nav class="navbar bg-success p-2 text-dark bg-opacity-10 px-2">
+        <div class="container-fluid navbar-brand navbar-container"><a href="/" class="navbar-brand">垃圾話產生器</a></div>
     </nav>
     
     {{{body}}}
